Implement primitive take convenience